--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "runteq_normal",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "bootstrap": "^5.2.3",
+    "react-bootstrap": "^2.7.1"
+  }
 }
