--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "admin-lte": "^3.1",
     "bootstrap": "^5.2.3",
     "react-bootstrap": "^2.7.1"
   }
